// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionRow /> renders compact for receipt 1`] = `
<div
  className="c-ActionRow-PJLV mx-0 row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="c-ActionRowImage-PJLV c-ActionRowImage-PJLV-eBHKI-type-compact"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="c-ActionRowDetails-jUwbjv c-ActionRowDetails-jUwbjv-iRNZlZ-type-compact col"
  >
    <div
      className="c-ActionRowMessage-PJLV c-ActionRowMessage-PJLV-knUOqr-type-compact row no-gutters"
    >
      <div
        className="col-md-12 col-12"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowTitle-cYlxUq col"
          >
            component.transactions.ActionMessage.FunctionCall.called_method
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/5ce78003b590264df3f259983f3c3e0917fc10ea.lockup.near"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              5ce78…ockup.near
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionRow /> renders compact for transaction 1`] = `
<div
  className="c-ActionRow-PJLV mx-0 row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="c-ActionRowImage-PJLV c-ActionRowImage-PJLV-eBHKI-type-compact"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="c-ActionRowDetails-jUwbjv c-ActionRowDetails-jUwbjv-iRNZlZ-type-compact col"
  >
    <div
      className="c-ActionRowMessage-PJLV c-ActionRowMessage-PJLV-knUOqr-type-compact row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowTitle-cYlxUq col"
          >
            component.transactions.ActionMessage.AddKey.new_key_added
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/receiver.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              receiver.test
            </a>
            : ed25519:8LXEySy...
            <p>
              component.transactions.ActionMessage.AddKey.fullAccessPermission
            </p>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowText-gopnJP col"
          >
            component.transactions.ActionRowBlock.by
             
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/signer.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              signer.test
            </a>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="c-ActionRowTransaction-lbSlCc col"
          >
            <a
              className="c-Anchor-hIXuvg"
              href="/transactions/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              BvJeW6g...
            </a>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="c-ActionRowTimer-iiZTaa col"
          >
            <span
              className="c-ActionRowTimerStatus-cJbzxd"
            >
              common.blocks.status.fetching_status
              /common.blocks.status.checking_finality
            </span>
             
            <span>
              0s
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionRow /> renders delegateAction with details 1`] = `
<div
  className="c-ActionRow-PJLV c-ActionRow-PJLV-frrtQL-type-sparse mx-0 row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="c-ActionRowImage-PJLV c-ActionRowImage-PJLV-LCgTA-type-sparse"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="c-ActionRowDetails-jUwbjv col"
  >
    <div
      className="c-ActionRowMessage-PJLV row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowTitle-cYlxUq col"
          >
            component.transactions.ActionMessage.Delegate.delegated
            <div
              className="c-DelegateActionsWrapper-bjJnGc"
            >
              <div
                className="c-DelegateActionWrapper-gTfNJm"
              >
                component.transactions.ActionMessage.FunctionCall.called_method
                <a
                  className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/bob.testnet"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  bob.testnet
                </a>
                <dl>
                  <dt>
                    component.transactions.ActionMessage.FunctionCall.arguments
                  </dt>
                  <dd>
                    <div
                      className="c-Wrapper-hgxcBQ"
                    >
                      <div
                        className="c-Wrapper-fswXQT"
                        style={
                          Object {
                            "maxHeight": 200,
                          }
                        }
                      >
                        <div
                          className="c-CodePreviewWrapper-gJFGlx"
                        >
                          {
  "value": 1
}
                        </div>
                      </div>
                    </div>
                  </dd>
                </dl>
              </div>
              <div
                className="c-DelegateActionWrapper-gTfNJm"
              >
                component.transactions.ActionMessage.Transfer.transferred
                <span
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  1
                   
                  Ⓝ
                </span>
                component.transactions.ActionMessage.Transfer.to
                <a
                  className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
                  href="/accounts/bob.testnet"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  bob.testnet
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowText-gopnJP col"
          >
            component.transactions.ActionRowBlock.by
             
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/relayer.testnet"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              relayer.testnet
            </a>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="c-ActionRowTransaction-lbSlCc col"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="c-ActionRowTimer-iiZTaa col"
          >
            <span
              className="c-ActionRowTimerStatus-cJbzxd"
            >
              common.blocks.status.fetching_status
              /common.blocks.status.checking_finality
            </span>
             
            <span>
              0s
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionRow /> renders functioncall with detail 1`] = `
<div
  className="c-ActionRow-PJLV c-ActionRow-PJLV-frrtQL-type-sparse mx-0 row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="c-ActionRowImage-PJLV c-ActionRowImage-PJLV-LCgTA-type-sparse"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="c-ActionRowDetails-jUwbjv col"
  >
    <div
      className="c-ActionRowMessage-PJLV row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowTitle-cYlxUq col"
          >
            component.transactions.ActionMessage.FunctionCall.called_method
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/receiver.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              receiver.test
            </a>
            <dl>
              <dt>
                component.transactions.ActionMessage.FunctionCall.arguments
              </dt>
              <dd>
                <div
                  className="c-Wrapper-hgxcBQ"
                >
                  <div
                    className="c-Wrapper-fswXQT"
                    style={
                      Object {
                        "maxHeight": 200,
                      }
                    }
                  >
                    <div
                      className="c-CodePreviewWrapper-gJFGlx"
                    >
                      {
  "value": 1
}
                    </div>
                  </div>
                </div>
              </dd>
            </dl>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowText-gopnJP col"
          >
            component.transactions.ActionRowBlock.by
             
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/signer.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              signer.test
            </a>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="c-ActionRowTransaction-lbSlCc col"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="c-ActionRowTimer-iiZTaa col"
          >
            <span
              className="c-ActionRowTimerStatus-cJbzxd"
            >
              common.blocks.status.fetching_status
              /common.blocks.status.checking_finality
            </span>
             
            <span>
              0s
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionRow /> renders sparsely ActionRow for receipt 1`] = `
<div
  className="c-ActionRow-PJLV c-ActionRow-PJLV-frrtQL-type-sparse mx-0 row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="c-ActionRowImage-PJLV c-ActionRowImage-PJLV-LCgTA-type-sparse"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="c-ActionRowDetails-jUwbjv col"
  >
    <div
      className="c-ActionRowMessage-PJLV row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowTitle-cYlxUq col"
          >
            component.transactions.ActionMessage.FunctionCall.called_method
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/app.nearcrowd.near"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              app.nearcrowd.near
            </a>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowText-gopnJP col"
          >
            component.transactions.ActionRowBlock.by
             
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/elonmusk_tesla.near"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              elonmusk_tesla.near
            </a>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="c-ActionRowTransaction-lbSlCc col"
          >
            <a
              className="c-Anchor-hIXuvg"
              href="/transactions/2WDYbcuRyyRXJvrXkfFej9Vrv3s3GNTxVQAqKFTiEtGh#7uADRkZL3b8HRbCRe3ML6yRyVZ46HHp1pEJKbxewq5Hg"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              7uADRkZ...
            </a>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="c-ActionRowTimer-iiZTaa col"
          >
            <span
              className="c-ActionRowTimerStatus-cJbzxd"
            >
              common.transactions.status.success
              /common.blocks.status.checking_finality
            </span>
             
            <span>
              2y past
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionRow /> renders sparsely ActionRow for transaction by default 1`] = `
<div
  className="c-ActionRow-PJLV c-ActionRow-PJLV-frrtQL-type-sparse mx-0 row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="c-ActionRowImage-PJLV c-ActionRowImage-PJLV-LCgTA-type-sparse"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="c-ActionRowDetails-jUwbjv col"
  >
    <div
      className="c-ActionRowMessage-PJLV row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowTitle-cYlxUq col"
          >
            component.transactions.ActionMessage.CreateAccount.new_account_created
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/receiver.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              receiver.test
            </a>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowText-gopnJP col"
          >
            component.transactions.ActionRowBlock.by
             
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/signer.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              signer.test
            </a>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="c-ActionRowTransaction-lbSlCc col"
          >
            <a
              className="c-Anchor-hIXuvg"
              href="/transactions/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              BvJeW6g...
            </a>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="c-ActionRowTimer-iiZTaa col"
          >
            <span
              className="c-ActionRowTimerStatus-cJbzxd"
            >
              common.blocks.status.fetching_status
              /common.blocks.status.checking_finality
            </span>
             
            <span>
              0s
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ActionRow /> renders sparsely ActionRow for transaction with status 1`] = `
<div
  className="c-ActionRow-PJLV c-ActionRow-PJLV-frrtQL-type-sparse mx-0 row no-gutters"
>
  <div
    className="col-auto"
  >
    <div
      className="c-ActionRowImage-PJLV c-ActionRowImage-PJLV-LCgTA-type-sparse"
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="c-ActionRowDetails-jUwbjv col"
  >
    <div
      className="c-ActionRowMessage-PJLV row no-gutters"
    >
      <div
        className="col-md-8 col-7"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowTitle-cYlxUq col"
          >
            component.transactions.ActionMessage.CreateAccount.new_account_created
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/receiver.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              receiver.test
            </a>
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="c-ActionRowText-gopnJP col"
          >
            component.transactions.ActionRowBlock.by
             
            <a
              className="c-Anchor-hIXuvg c-AccountLinkWrapper-dbzzBd"
              href="/accounts/signer.test"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              signer.test
            </a>
          </div>
        </div>
      </div>
      <div
        className="ml-auto text-right col-md-4 col-5"
      >
        <div
          className="row"
        >
          <div
            className="c-ActionRowTransaction-lbSlCc col"
          >
            <a
              className="c-Anchor-hIXuvg"
              href="/transactions/BvJeW6gnFjkCBKCsRNEBrRLDQCFZNxLAi6uXzmLaVrrj"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              BvJeW6g...
            </a>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="c-ActionRowTimer-iiZTaa col"
          >
            <span
              className="c-ActionRowTimerStatus-cJbzxd"
            >
              common.transactions.status.success
              /common.blocks.status.checking_finality
            </span>
             
            <span>
              0s
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
